// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders design 1`] = `
<div
  className="src-shared-components-ChallengeTile-___style__challenge___2bI0g src-shared-components-ChallengeTile-___style__tile___1XoeI"
  style={
    Object {
      "margin": "10px 5px",
      "padding": "15px",
      "width": "285px",
    }
  }
>
  <div
    className="src-shared-components-ChallengeTile-___style__challenge___2bI0g src-shared-components-ChallengeTile-___style__tile-view___2CiHl src-shared-components-ChallengeTile-___style__DESIGN___3gFcw"
  >
    <div
      className="src-shared-components-ChallengeTile-___style__completed-challenge___3fEul"
    >
      <header>
        <Link
          className="src-shared-components-ChallengeTile-___style__name___3CeG_"
          replace={false}
          to="/challenges/30051608"
        >
          <span>
            Sunshot - MapMySolar - SunGiver  - Brand Concept Logo Design Challenge
          </span>
        </Link>
        <p
          className="src-shared-components-ChallengeTile-___style__subtrack-color___3XdcU"
        >
          LOGO DESIGN
        </p>
        <p
          className="src-shared-components-ChallengeTile-___style__date-completed___PXe48"
        >
          October 2015
        </p>
      </header>
      <div
        className="src-shared-components-ChallengeTile-___style__challenge-card__bottom___3ccud"
      >
        <div
          className="src-shared-components-ChallengeTile-___style__challenge-details___1Iia_ src-shared-components-ChallengeTile-___style__DATA_SCIENCE___3RazX"
        >
          <div
            className="src-shared-components-ChallengeTile-___style__design-challenge-user-place___3w4Rq"
          >
            <div
              className="src-shared-components-ChallengeTile-___style__tile-view___2CiHl"
            >
              <p
                className="src-shared-components-ChallengeTile-___style__place___3WlNy"
              >
                Passed Screening
              </p>
              <div
                className="src-shared-components-ChallengeTile-___style__thumbnail___1dkLw"
              />
            </div>
          </div>
        </div>
        <p
          className="src-shared-components-ChallengeTile-___style__roles___20v5l"
        >
          <span>
            <span>
              Role:  
            </span>
            <span>
              Submitter
            </span>
          </span>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders develop 1`] = `
<div
  className="src-shared-components-ChallengeTile-___style__challenge___2bI0g src-shared-components-ChallengeTile-___style__tile___1XoeI"
  style={
    Object {
      "margin": "10px 5px",
      "padding": "15px",
      "width": "285px",
    }
  }
>
  <div
    className="src-shared-components-ChallengeTile-___style__challenge___2bI0g src-shared-components-ChallengeTile-___style__tile-view___2CiHl src-shared-components-ChallengeTile-___style__DEVELOP___1dbQm"
  >
    <div
      className="src-shared-components-ChallengeTile-___style__completed-challenge___3fEul"
    >
      <header>
        <Link
          className="src-shared-components-ChallengeTile-___style__name___3CeG_"
          replace={false}
          to="/challenges/30060905"
        >
          <span>
            $100 Eaton PX 2.0 Petting Zoo - MDC Web Enhancement F2F Challenge
          </span>
        </Link>
        <p
          className="src-shared-components-ChallengeTile-___style__subtrack-color___3XdcU"
        >
          FIRST 2 FINISH
        </p>
        <p
          className="src-shared-components-ChallengeTile-___style__date-completed___PXe48"
        >
          December 2017
        </p>
        <div
          className="src-shared-components-ChallengeTile-___style__winner-ribbon___2qfdT"
        >
          <WinnerRibbon
            height="26"
            viewBox="0 0 73 26"
            width="73"
            xmlns="http://www.w3.org/2000/svg"
          />
        </div>
      </header>
      <div
        className="src-shared-components-ChallengeTile-___style__challenge-card__bottom___3ccud"
      >
        <div
          className="src-shared-components-ChallengeTile-___style__challenge-details___1Iia_ src-shared-components-ChallengeTile-___style__DATA_SCIENCE___3RazX"
        >
          <div
            className="src-shared-components-ChallengeTile-___style__dev-challenge-user-place___VL66h"
          >
            <div
              className="src-shared-components-ChallengeTile-___style__tile-view___2CiHl"
            >
              <p
                className="src-shared-components-ChallengeTile-___style__first-place___kIysV src-shared-components-ChallengeTile-___style__place___3WlNy"
              >
                1
                <span>
                  st
                </span>
                 
                Place
              </p>
              <div
                className="src-shared-components-ChallengeTile-___style__challenge-score___232oX"
              >
                <p
                  className="src-shared-components-ChallengeTile-___style__score___Aguxg"
                >
                  100%
                </p>
                <p
                  className="src-shared-components-ChallengeTile-___style__last-child___1s43e"
                >
                  Review Score
                </p>
              </div>
            </div>
          </div>
        </div>
        <p
          className="src-shared-components-ChallengeTile-___style__roles___20v5l"
        >
          <span>
            <span>
              Role:  
            </span>
            <span>
              Submitter
            </span>
          </span>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders marathon 1`] = `
<div
  className="src-shared-components-ChallengeTile-___style__challenge___2bI0g src-shared-components-ChallengeTile-___style__tile___1XoeI"
  style={
    Object {
      "margin": "10px 5px",
      "padding": "15px",
      "width": "285px",
    }
  }
>
  <div
    className="src-shared-components-ChallengeTile-___style__challenge___2bI0g src-shared-components-ChallengeTile-___style__tile-view___2CiHl src-shared-components-ChallengeTile-___style__DATA_SCIENCE___3RazX"
  >
    <div
      className="src-shared-components-ChallengeTile-___style__completed-challenge___3fEul"
    >
      <header>
        <a
          className="src-shared-components-ChallengeTile-___style__name___3CeG_"
          href="https://community.topcoder.com/longcontest/stats/?module=ViewOverview&rd=17153"
        >
          2018 TCO Marathon
        </a>
        <p
          className="src-shared-components-ChallengeTile-___style__subtrack-color___3XdcU"
        >
          MARATHON MATCH
        </p>
        <p
          className="src-shared-components-ChallengeTile-___style__date-completed___PXe48"
        >
          May 2018
        </p>
      </header>
      <div
        className="src-shared-components-ChallengeTile-___style__challenge-card__bottom___3ccud"
      >
        <div
          className="src-shared-components-ChallengeTile-___style__challenge-details___1Iia_ src-shared-components-ChallengeTile-___style__DATA_SCIENCE___3RazX"
        >
          <div
            className="src-shared-components-ChallengeTile-___style__marathon-score___3oOlQ"
          >
            <p
              className="src-shared-components-ChallengeTile-___style__score___Aguxg"
            >
              996714.71
            </p>
            <p>
              Total Points
            </p>
          </div>
        </div>
        <p
          className="src-shared-components-ChallengeTile-___style__roles___20v5l"
        />
      </div>
    </div>
  </div>
</div>
`;
